<resources>
    <string name="app_name">Fake News Detector</string>
    <string name="tutorial_1">Verifique a veracidade de uma notícia</string>
    <string name="tutorial_2">Acompanhe suas pesquisas</string>
    <string name="tutorial_3">Compartilhe com os amigos</string>
    <string name="tutorial_4">Vamos tornar a informação mais confiável!</string>
    <string name="tutorial_button">Comece agora</string>
c
    <string name="search">Buscar</string>
    <string name="history">Histórico</string>
    <string name="title">Título</string>
    <string name="created_at">Criado em</string>
    <string name="content">Conteúdo</string>
    <string name="url">URL</string>
    <string name="share">Compartilhar</string>
    <string name="image">Imagem</string>
    <string name="english">Inglês</string>
    <string name="portuguese">Português</string>
    <string name="language">Idioma</string>
    <string name="do_search">Consultar</string>
    <string name="error_title">Título é obrigatório</string>
    <string name="error_url">URL é obrigatório</string>
    <string name="error_parse_url">O conteúdo da notícia não pode ser processado</string>
    <string name="error_predict">Erro ao classificar notícia</string>
    <string name="text_found">Texto encontrado:</string>
    <string name="clear">Limpar</string>
    <string name="true_new">Essa notícia parece verídica</string>
    <string name="fake_new">Encontrei uma fake news!</string>
    <string name="empty_history">Você ainda não pesquisou nenhuma notícia :/</string>
</resources>